<resources>
    <string name="app_name">Calculator</string>
    <string name="button_label_decimal">.</string>
    <string name="button_label_equal">=</string>
    <string name="button_label_seven">7</string>
    <string name="button_label_three">3</string>
    <string name="button_label_plus">+</string>
    <string name="button_label_two">2</string>
    <string name="button_label_six">6</string>
    <string name="button_label_minus">-</string>
    <string name="button_label_five">5</string>
    <string name="button_label_eight">8</string>
    <string name="button_label_nine">9</string>
    <string name="button_label_zero">0</string>
    <string name="button_label_clear">Clear</string>
    <string name="textView_label_output">0</string>
    <string name="button_label_slash">/</string>
    <string name="button_label_modulus">%</string>
    <string name="button_label_four">4</string>
    <string name="button_label_one">1</string>
    <string name="button_label_multiply">X</string>
    <string name="decimal_exists">Decimal already present</string>
    <string name="operator_exists">cannot use operator twice yet</string>
    <string name="no_operator">You haven\'t clicked any operators</string>
    <string name="button_label_calc">A/V</string>
    <string name="activity2_name">Areas and Volumes</string>
    <string name="button_label_triangle">Area of Triangle</string>
    <string name="button_label_rectangle">Area of Rectangle</string>
    <string name="button_label_circle">Area of Circle</string>
    <string name="button_label_rectPrism">Volume of Rectangular Prism</string>
    <string name="button_label_pyramid3">Volume of Pyramid</string>
    <string name="button_label_pyramid4">Volume of Pyramid</string>
    <string name="button_label_cone">Volume of Cone</string>
    <string name="button_label_cylinder">Volume of Cylinder</string>
    <string name="button_label_sphere">Volume of Sphere</string>
    <string name="activity3_name">Area/Volume</string>
    <string name="main_label">0</string>
    <string name="param1_label">Param1:</string>
    <string name="param2_label">Param2:</string>
    <string name="param3_label">Param3:</string>
    <string name="param1_edit_label">Enter Value</string>
    <string name="param2_edit_label">Enter Value</string>
    <string name="param3_edit_label">Enter Value</string>
    <string name="solve_label">Solve</string>
    <string name="back_label">Send Back to main screen</string>
    <string name="param_base">Base</string>
    <string name="param_height">Height</string>
    <string name="param_length">Length</string>
    <string name="param_width">Width</string>
    <string name="param_radius">Radius</string>
    <string name="area_of_base">Area of Base</string>
</resources>
