<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="9"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:onClick="onDeleteClick"
        android:text="0"
        android:textColor="#F8F8F8"
        android:textSize="85sp" />

    <TextView
        android:id="@+id/tv_operator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onDeleteClick"
        android:text=""
        android:textColor="#F8F8F8"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="100"
                android:background="@drawable/rounded_button3"
                android:foreground="@drawable/ripple"
                android:onClick="onClearClick"
                android:text="@string/button_label_clear"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_button3"
                android:foreground="@drawable/ripple"
                android:onClick="onModulusClick"
                android:text="@string/button_label_modulus"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onSlashClick"
                android:text="@string/button_label_slash"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onSevenClick"
                android:text="@string/button_label_seven"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onEightClick"
                android:text="@string/button_label_eight"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onNineClick"
                android:text="@string/button_label_nine"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onMultiplyClick"
                android:text="@string/button_label_multiply"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onFourClick"
                android:text="@string/button_label_four"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onFiveClick"
                android:text="@string/button_label_five"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onSixClick"
                android:text="@string/button_label_six"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onMinusClick"
                android:text="@string/button_label_minus"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onOneClick"
                android:text="@string/button_label_one"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onTwoClick"
                android:text="@string/button_label_two"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onThreeClick"
                android:text="@string/button_label_three"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onPlusClick"
                android:text="@string/button_label_plus"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onCalculationClick"
                android:text="@string/button_label_calc"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onZeroClick"
                android:text="@string/button_label_zero"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button2"
                android:foreground="@drawable/ripple"
                android:onClick="onDecimalClick"
                android:text="@string/button_label_decimal"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:foreground="@drawable/ripple"
                android:onClick="onEqualClick"
                android:text="@string/button_label_equal"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                tools:ignore="ButtonStyle,UnusedAttribute" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>